code refactoring, webroot & ssl cfg options, contrast ratio fixes

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ img
 	.mb
 	{
 		color:#fff;
-		background: #2A9F29;
+		background: #248523;
 		box-shadow:0px 2px 2px #114011; 
 	}
 
@@ -80,7 +80,7 @@ img
 	.ani
 	{
 		color:#fff;
-		background: #B0A100;
+		background: #807400;
 		box-shadow:0px 2px 2px #332F00; 
 	}
 
@@ -94,7 +94,7 @@ img
 	.png
 	{
 		color:#fff;
-		background: #3689B2;
+		background: #187EA9;
 		box-shadow:0px 2px 2px #122D3B; 
 	}
 
